<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:orientation="vertical"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/itemBackIcon"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:showIn="@layout/item_card">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/categoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/KMenuTitle"
        android:text="@string/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/categoryProductCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/KCategoryContent"
        android:text="@string/product_count"
        app:drawableStartCompat="@drawable/ic_spoon_fork_small" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/categorySaleCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/KCategoryContent"
        android:text="@string/sale_count"
        app:drawableStartCompat="@drawable/ic_sale_small" />

</androidx.appcompat.widget.LinearLayoutCompat>
