<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:orientation="vertical"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/itemBackIcon"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:showIn="@layout/item_card">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/foodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/KMenuTitle"
        android:text="@string/title" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/foodDiscountPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/KFoodDiscountPrice"
            android:text="@string/discount_price"
            android:layout_weight="0"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/foodOriginalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/KFoodOriginalPrice"
            android:text="@string/original_price"
            android:layout_weight="0"
            android:layout_marginEnd="15dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RatingBar
        android:id="@+id/foodRatingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:isIndicator="true"
        android:max="5"
        android:numStars="5"
        android:stepSize="1"
        android:progress="2"
        android:paddingVertical="5dp"
        android:progressTint="#ff9800"
        />

</androidx.appcompat.widget.LinearLayoutCompat>
